# Verdantia

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Verdanta.txt  docker-compose.yml  verdanta.txt
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24c5b35436f6_initial_schema.py  36c78d38d2a1_add_alerts.py  a0d9f52e1bfc_add_knowledge_entries.py  a1b2c3d4e5f6_fixes_nullable_garden_id_indexes_fk.py  a1b2c3d4e5f6_nullable_garden_id_on_llm_interactions.py  b187bdae2f0c_add_journal_entries.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  garden.py  plant.py  sensor.py  task.py
backend/app/schemas/: garden.py  plant.py  sensor.py  task.py
backend/app/services/: garden_service.py  llm_service.py  plant_service.py  scheduler_service.py  weather_service.py
backend/app/utils/: constants.py
backend/src/verdanta/: __init__.py  main.py
backend/src/verdanta/core/: config.py  database.py
backend/src/verdanta/models/: __init__.py  alert.py  garden.py  journal.py  knowledge.py  llm.py  plant.py  planting.py  settings.py  soil.py  weather.py
backend/src/verdanta/routes/: advisor.py  alerts.py  app_settings.py  calendar.py  gardens.py  harvest.py  journal.py  photos.py  (+5 more)
backend/tests/: conftest.py  test_calendar.py  test_calendar_service.py  test_curation.py  test_diagnosis.py  test_gardens.py  test_llm_service.py  test_openfarm_service.py  test_plantings.py  test_plants.py  test_sensor_service.py  test_sensors.py  test_settings.py  test_settings_llm.py  test_weather_service.py
(+68 files in other folders)
